--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,22 @@ table {
 th, td {
     text-align: left;
     padding: 8px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 0px;
 }
 
-tr:hover {
-    background-color: #f5f5f5;
+tr.header {
+    background-color: #dbd1d0;
+    border-bottom: 2px solid #3b3b3b
 }
 
-th {
-    background-color: #aba0ca;
-    color: white;
+table tbody tr:nth-of-type(2n) td {
+    border-bottom: 2px solid #ddd
 }
+
+.odd{
+  background-color: #dbd1d0;
+}
+
 
 /* Styling for the modal */
 .modal {
